--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
               <h2 class="mb-4" style="color: white ; font-family: 'Work Sans', sans-serif">Need Support and Counselling?</h2>
               <h3 style="color: white ; font-family: 'Work Sans', sans-serif">We inspire you to have a real life...</h3>
               <br /><br />
-              <p><a href="#blog" class="btn btn-primary px-5 py-3" style="background-color: darkred">Visit Blog</a></p>
+              <p><a href="#blog" class="btn btn-primary px-5 py-3" style="background-color: darkred">Need Someone to Talk to?</a></p>
           </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
@@ -45,7 +45,7 @@
               <h2 class="mb-4" style="color: white ; font-family: 'Work Sans', sans-serif">Get latest news about sports</h2>
               <h3 style="color: white ; font-family: 'Work Sans', sans-serif">snd politics right here...</h3>
               <br /><br />
-              <p><a href="#blog" class="btn btn-primary px-5 py-3" style="background-color: darkred">Visit Blog</a></p>
+              <p><a href="#blog" class="btn btn-primary px-5 py-3" style="background-color: darkred">Gooaall!</a></p>
           </div>
       </div>
     </div>
