--- a/SelahSeries/wwwroot/NewFolder2/styles/contact.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/contact.css
@@ -739,7 +739,7 @@ section
     position: relative;
     width: 143px;
     height: 36px;
-    background: rgba(45,223,128,0.1);
+    background: #ced4da;
     color: #8b0000;
     border: none;
     outline: none;
