--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-                    <h1 class="text-white" style="font-family: 'Work Sans', sans-serif">About Us</h1>
+                    <h1 class="text-white" style="font-family: 'Work Sans', sans-serif; text-transform:initial">About Us</h1>
                     <p style="font-family: 'Work Sans', sans-serif">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
             </div>
@@ -29,15 +29,22 @@
     <div class="site-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <img src="/NewFolder2/images2/img_1.jpg" alt="Image" class="img-fluid">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <div class="site-section-heading text-center mb-5 w-border col-md-6 mx-auto">
-                        <h2 class="mb-5" style="color:darkred">Adegbaju O.A</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga itaque deserunt
-                            officia, error reiciendis ab quod?
+                        <h3 class="mb-5" style="color:#ad001c; text-align:center">Lekan: Simply a Blend of Grace, Vision and Courage!</h3>
+                        <p style="color:black; text-align:justify">
+                            I am Olalekan Isaiah AGUNBIADE a Nigerian citizen from the ancient city of Ilesha. I was born in Alaba-Oro area of Lagos as the last born of a monogamous friendly family. However, I grew up in Odo-Iro area of Ilesha. Odo-Iro used to be a scary downtown in those days, featuring all sorts of social vices and perhaps the toughest place to raise a child. I bless God for His unflinching grace, my disciplinarian parents and siblings, and some church people. I had my early education at The Apostolic Church Primary School, Oke – Iro and Methodist High School, Cappa; both in Ilesha.
+
+                            I qualified as a Registered Nurse (RN) from the School of Nursing, Wesley Guild Hospital Ilesha in 2006; completed my Bachelor’s degree in Nursing in 2014 from the historical Obafemi Awolowo University, Ile-Ife and had my Public Health Nursing program at the College of Hygiene, Eleyele, Ibadan in 2015. By divine privilege, I was the first African alumnus of the Edmond J. Safra Clinical Faculty Program (2014); a member of World Stroke Organisation, European Stroke Organisation, and Movement Disorder Society, just to mention a few. My professional practice includes serving as one of the nurses to Late (Dr.) Lawrence Omole, a volunteer experience with Living Hope Foundation, and staff nurse position at Obafemi Awolowo University Teaching Hospitals Complex, Ile-Ife and currently practicing in a Regional Hospital in Europe. I have been involved in some research publications in public health and movement disorders.
+                            I encountered Christ at salvation on 1st of July, 1999 and I bless God for His sustaining grace through the years, despite my several failures and inconsistencies. Too many times my salvation story looked like the “seed lost amidst the thorns”. Every opportunity to grow met with the choking and frustrating effects of legalistic doctrine, societal hypocrisy embedded in religion, negative peer social pressure, abject poverty in a setting that was not used to a teenager being “born again”. Through it all, God jealously preserved me. By divine privilege, I have served as Children Church teacher, an usher, in drama groups and as a Sunday school teacher within the body of Christ.
+
+                            My earliest privilege at intervening in a marital issue that I can remember dates back to when I was 12, and Holy Spirit has been a reliable companion since then. As God has enabled, I have written few books – THE TIME of LIFE, FULFILLING YOUR PREDESTINED GREATNESS and the SELAH SERIES Singles and Married editions. My autobiography “OMO TALIKA” is yet to be published. I am contently married to Titilayo who is an able partner in this calling, and the young marriage is blessed beyond measures, to the glory of God.
+
+                            By the help of the Holy Spirit, I began a yearly series on Facebook in 2010 spanning a full month each year. The main motivation for love and relationship series back then were the inconsistencies I observed in peoples’ Facebook posts and my personal failures which without God’s rare grace and the mentorship of veterans would have been enough to wreck anyone’s destiny. To the glory of the Almighty God, several testimonies and feedbacks have attested to these God-mediated teachings. The 10 years editions 2010 – 2019 have been compiled to the SELAH SERIES books. To many people across several divides, ‘Lekan Agunbiade translates to several things depending on areas of interests – love, relationship & marriage; political analyst, life & career coach; sport analyst; Bible study teacher; entrepreneur and so on. Basically, I just believe in maximizing every opportunity to serve God and God’s people.
+
                         </p>
                     </div>
                 </div>
@@ -48,16 +55,20 @@
     <div class="site-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <div class="site-section-heading text-center mb-5 w-border col-md-6 mx-auto">
-                        <h2 class="mb-5" style="color:darkred">Adegbaju O.A</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga itaque deserunt
-                            officia, error reiciendis ab quod?
+                        <h3 class="mb-5" style="color:#ad001c; text-align:center">Titilayo: A World of Vision Embedded in Tranquility</h3>
+                        <p style="color:black; text-align:justify">
+                            My name is Titilayo LEKAN-AGUNBIADE. I was born into a middle level monogamous family of six in Nigeria. I had my primary school education in St. Mary Catholic Primary School, Ile-Ife and my secondary school education at Adepetu Comprehensive College, Ile-Ife from where I proceeded to Ladoke Akintola University of Technology, Ogbomosho for my undergraduate degree in Medical Laboratory Science and later to Obafemi Awolowo University, Ile-Ife for my Master’s degree in Public Health. I am a member of Academy of Clinical Science and Medical Laboratory Medicine and the European Society of Contraception and Reproductive Health.
+                            I gave my life to Christ when I was 10 year old and I had some struggles especially with my parents because I was considered to be a “religious extremist” but the fire kept burning despite all odds.
+                            I met my husband in the year 2011 in the church (Chapel of Grace, Obafemi Awolowo Teaching Hospital, Ile-Ife) during my one year internship program as a Medical Laboratory Scientist. He was my group leader and I never thought he will eventually be my “One and Only”. He proposed to me at a stage of my life when I needed answers and direction from God concerning my marital life, so I told him not to bother himself about me because I was not ready for such commitment and he understandably went his way but God’s mercies brought us together later in our lives when I was sure he was the one. We celebrated our 7 years in marriage few months ago and to be sincere, it has been glorious as well as very challenging, to God be the glory.
+                            I am passionate about the total wellness of women and crave to see the world filled with wholesome and impactful women who live decisively, achieving their dreams without restrictions. I believe in the power and potency of a goodly marriage. It also gives me utmost joy to lighten other people’s burden and to put smiles on their faces.
+                            It is the passion of my husband and I to share our lives and experiences, to help others that are hoping for a glorious marriage and are ready to go extra miles to fulfil their purposes in marriage and in other aspects of life while we stay open to learn from other people’s experiences as well because we believe that life is all about sharing and learning.
+
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <img src="/NewFolder2/images2/img_1.jpg" alt="Image" class="img-fluid">
                 </div>
             </div>
