--- a/SelahSeries/Views/Home/Contact.cshtml
+++ b/SelahSeries/Views/Home/Contact.cshtml
@@ -13,7 +13,7 @@
 }
 
 <div class="home">
-    <div class="home_background parallax-window" data-parallax="scroll" style="background-image:url(/NewFolder2/images/regular.jpg)" data-speed="0.8"></div>
+    <div class="home_background parallax-window" data-parallax="scroll" style="background-image:url(/NewFolder2/new/amir-samoh-WgV0g05NQCM-unsplash.jpg)" data-speed="0.8"></div>
     <div class="home_content">
         <div class="container">
             <div class="row">
@@ -25,7 +25,7 @@
                                 <input type="text" class="contact_input contact_input_name" placeholder="Your Name" required="required">
                                 <input type="email" class="contact_input contact_input_email" placeholder="Your Email" required="required">
                                 <textarea class="contact_text" placeholder="Your Message" required="required"></textarea>
-                                <button type="submit" class="contact_button" style="color: darkred">Send Message</button>
+                                <button type="submit" class="contact_button">Send Message</button>
                             </form>
                         </div>
                     </div>
