--- a/SelahSeries/wwwroot/NewFolder2/styles/main_styles.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/main_styles.css
@@ -36,6 +36,32 @@
 2. Body and some general stuff
 *********************************/
 
+.top .carde {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin-bottom: 20px;
+}
+
+    .top .carde .contain a {
+        color: darkorange;
+    }
+
+    .top .carde:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+
+    .top .carde img {
+        height: 23.81em;
+    }
+
+img#first, img#third {
+    margin-top: 30px;
+}
+
+.contain {
+    padding: 2px 16px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -872,7 +898,7 @@ section {
 }
 
 .blog_section {
-    margin-top: 80px;
+    margin-top: 35px;
 }
 
 /*********************************
@@ -887,7 +913,7 @@ section {
     font-family: 'Ubuntu', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    color: darkred;
+    color: #ad001c;
     padding-bottom: 10px;
     white-space: nowrap;
     -webkit-transform: translateY(3px);
@@ -933,7 +959,7 @@ section {
             font-family: 'Ubuntu', sans-serif;
             font-size: 12px;
             font-weight: 500;
-            color: rgba(0,0,0,0.4);
+            color: #007bff;
             text-transform: uppercase;
             letter-spacing: 0.025em;
         }
@@ -1447,7 +1473,7 @@ section {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px;
     font-weight: 500;
-    color: rgba(0,0,0,0.5);
+    color: #007bff;
     cursor: pointer;
 }
 
@@ -1462,7 +1488,6 @@ section {
 .sidebar {
     width: 100%;
     height: 100%;
-    padding-top: 83px;
     padding-left: 30px;
 }
 
@@ -1479,7 +1504,8 @@ section {
     font-family: 'Ubuntu', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    color: darkred;
+    color: #ad001c;
+    padding-top: 35px;
 }
 
 .sidebar_section_content {
@@ -1538,6 +1564,7 @@ section {
     position: absolute;
     top: 5px;
     right: 0;
+    padding-top:35px;
 }
 
 .sidebar_slider_nav_container .custom_prev svg polyline,
