--- a/SelahSeries/wwwroot/NewFolder2/styles/responsive.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/responsive.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 /******************************
@@ -205,6 +205,7 @@
 		padding-left: 15px;
 		padding-right: 15px;
 		padding-bottom: 100px;
+        padding-top: 83px;
 	}
 	.sidebar_title_container
 	{
@@ -393,12 +394,7 @@
 	{
 		font-size: 20px;
 	}
-	.card-body
-	{
-		padding-left: 15px;
-		padding-right: 15px;
-	}
-}
+	
 
 /************
 11. 539px
@@ -422,16 +418,38 @@
 13. 479px
 ************/
 
-@media only screen and (max-width: 479px)
-{
-	
+    @media only screen and (max-width: 479px) {
+        .card-body {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        .top .carde {
+            margin-bottom: 20px;
+        }
+
+        img#first, img#third {
+            margin-top: 0px;
+        }
+    }
 }
 
 /************
 14. 400px
 ************/
 
-@media only screen and (max-width: 400px)
-{
-	
+@media only screen and (max-width: 400px) {
+    .card-body {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .top .carde {
+        margin-bottom: 20px;
+    }
+
+    img#first, img#third {
+        margin-top: 0px;
+    }
+}
 }
