--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -55,9 +55,10 @@
                                                 Blog
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                                @Html.ActionLink("Relationship & Marriage", "Category", "Blog", new { @class = "dropdown-item" })
-                                                @Html.ActionLink("Politics", "Category", "Blog", new { @class = "dropdown-item" })
-                                                @Html.ActionLink("Sports", "Category", "Blog", new { @class = "dropdown-item" })
+                                                
+                                                <a>@Html.ActionLink("Relationship & Marriage", "Category", "Blog", new { @class = "dropdown-item" })</a> 
+                                              <a>  @Html.ActionLink("Politics", "Category", "Blog", new { @class = "dropdown-item" })</a>
+                                             <a>   @Html.ActionLink("Sports", "Category", "Blog", new { @class = "dropdown-item" }) </a>
                                             </div>
                                         </li>
                                         <li>
@@ -65,8 +66,8 @@
                                                 Support/Counselling
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                                @Html.ActionLink("Our Suport Links", "Index", "Support", new { @class = "dropdown-item" })
-                                                @Html.ActionLink("Send Message", "Message_Form", "Support", new { @class = "dropdown-item" })
+                                                <a>@Html.ActionLink("Our Suport Links", "Index", "Support", new { @class = "dropdown-item" })</a>
+                                               <a> @Html.ActionLink("Send Message", "Message_Form", "Support", new { @class = "dropdown-item" })</a>
                                             </div>
                                         </li>
                                         <li>@Html.ActionLink("Books", "Index", "Home")</li>
@@ -96,7 +97,7 @@
             <!-- Menu -->
             <div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
                 <div class="menu_close_container"><div class="menu_close"><div></div><div></div></div></div>
-                <div class="logo menu_mm"><a href="#">Avision</a></div>
+                <div class="logo menu_mm"><a href="#">  SELAH</a></div>
                 <nav class="menu_nav">
                     <ul class="menu_mm">
                         <li class="menu_mm"><a href="index.html">Home</a></li>
