--- a/SelahSeries/wwwroot/NewFolder2/styles/style.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/style.css
@@ -34,7 +34,22 @@ a {
 
 .bg-dark {
   background: #13171d !important; }
-
+.parallax {
+    /* The image used */
+    background-image: url("img_parallax.jpg");
+    /* Full height */
+    height: 100%;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+        background-attachment: scroll;
+    }
+}
 .line-height-sm {
   line-height: 1.3; }
 
@@ -82,15 +97,15 @@ a {
     font-size: 0.9rem; }
     .btn.btn-primary {
         border: none;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        /* box-shadow: gold 2px 0 5px; */
-        paddiing:10px;
-        background-color: darkred;
+        box-shadow: 0 4px 8px 0 rgba(242, 186, 22, 0.2);
+        background-color: #D91438;
         color: #fff;
         border-radius: 17px;
     }
-    .btn.btn-primary:active, .btn.btn-primary:focus {
-      color: #fff; }
+        .btn.btn-primary:active, .btn.btn-primary:focus {
+            background-color: #D91438;
+            color: #fff;
+        }
   .btn.btn-outline-primary:hover {
     color: #fff !important; }
   .btn.btn-black {
