added blog management to the app

--- a/SelahSeries/Views/Blog/post.cshtml
+++ b/SelahSeries/Views/Blog/post.cshtml
@@ -9,7 +9,7 @@
 
 @section AddToEnd {
     <script src="~/NewFolder2/plugins/parallax-js-master/parallax.min.js"></script>
-    <script src="~/NewFolder2/js/post.js"></script>>
+    <script src="~/NewFolder2/js/post.js"></script>
 }
 
 
