--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -37,9 +37,11 @@
     </environment>
 </head>
 <body>
-
     
-        <div class="site-wrap">
+
+    <div class="site-wrap">
+        @if (ViewData["Add Navigation"] != "false")
+        {
             <header class="header">
                 <div class="container">
                     <div class="row">
@@ -55,10 +57,10 @@
                                                 Blog
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                                
-                                                <a>@Html.ActionLink("Relationship & Marriage", "Category", "Blog", new { @class = "dropdown-item" })</a> 
-                                              <a>  @Html.ActionLink("Politics", "Category", "Blog", new { @class = "dropdown-item" })</a>
-                                             <a>   @Html.ActionLink("Sports", "Category", "Blog", new { @class = "dropdown-item" }) </a>
+
+                                                <a>@Html.ActionLink("Relationship & Marriage", "Category", "Blog", new { @class = "dropdown-item" })</a>
+                                                <a>  @Html.ActionLink("Politics", "Category", "Blog", new { @class = "dropdown-item" })</a>
+                                                <a>   @Html.ActionLink("Sports", "Category", "Blog", new { @class = "dropdown-item" }) </a>
                                             </div>
                                         </li>
                                         <li>
@@ -67,7 +69,7 @@
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                                 <a>@Html.ActionLink("Our Suport Links", "Index", "Support", new { @class = "dropdown-item" })</a>
-                                               <a> @Html.ActionLink("Send Message", "Message_Form", "Support", new { @class = "dropdown-item" })</a>
+                                                <a> @Html.ActionLink("Send Message", "Message_Form", "Support", new { @class = "dropdown-item" })</a>
                                             </div>
                                         </li>
                                         <li>@Html.ActionLink("Books", "Index", "Home")</li>
@@ -119,11 +121,13 @@
                 </nav>
             </div>
 
+        }
 
 
-            @RenderBody()
+        @RenderBody()
 
-
+        @if (ViewData["Add Navigation"] != "false")
+        {
             <!-- Footer -->
 
             <footer class="footer">
@@ -145,7 +149,7 @@
                                 <div class="copyright">
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                     Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script> 
+                                    <script>document.write(new Date().getFullYear());</script>
                                     @*<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>*@
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </div>
@@ -154,38 +158,39 @@
                     </div>
                 </div>
             </footer>
+        }
         </div>
-        <environment include="Development">
-            <script src="~/NewFolder2/js/jquery-3.2.1.min.js"></script>
-            <script src="~/NewFolder2/styles/bootstrap4/popper.js"></script>
-            <script src="~/NewFolder2/styles/bootstrap4/bootstrap.min.js"></script>
-            <script src="~/NewFolder2/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-            <script src="~/NewFolder2/plugins/easing/easing.js"></script>
-            <script src="~/NewFolder2/plugins/masonry/masonry.js"></script>
-            <script src="~/NewFolder2/js/js3/aos.js"></script>
-            <script src="~/NewFolder2/js/js3/main.js"></script>
-            @if (IsSectionDefined("AddToEnd"))
-            {
-                @RenderSection("AddToEnd", required: false)
-            }
-        </environment>
-        <environment exclude="Development">
-            <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                    asp-fallback-src="~/NewFolder2/js/jquery-3.2.1.min.js"
-                    asp-fallback-test="window.jQuery"
-                    crossorigin="anonymous"
-                    integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
-            </script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-                    asp-fallback-src="~/NewFolder2/js/styles/bootstrap4/bootstrap.min.js"
-                    asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                    crossorigin="anonymous"
-                    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
-            </script>
-            <script src="~/js/site.min.js" asp-append-version="true"></script>
-        </environment>
+    <environment include="Development">
+        <script src="~/NewFolder2/js/jquery-3.2.1.min.js"></script>
+        <script src="~/NewFolder2/styles/bootstrap4/popper.js"></script>
+        <script src="~/NewFolder2/styles/bootstrap4/bootstrap.min.js"></script>
+        <script src="~/NewFolder2/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+        <script src="~/NewFolder2/plugins/easing/easing.js"></script>
+        <script src="~/NewFolder2/plugins/masonry/masonry.js"></script>
+        <script src="~/NewFolder2/js/js3/aos.js"></script>
+        <script src="~/NewFolder2/js/js3/main.js"></script>
+        @if (IsSectionDefined("AddToEnd"))
+        {
+            @RenderSection("AddToEnd", required: false)
+        }
+    </environment>
+    <environment exclude="Development">
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+                asp-fallback-src="~/NewFolder2/js/jquery-3.2.1.min.js"
+                asp-fallback-test="window.jQuery"
+                crossorigin="anonymous"
+                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+                asp-fallback-src="~/NewFolder2/js/styles/bootstrap4/bootstrap.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+                crossorigin="anonymous"
+                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
+        </script>
+        <script src="~/js/site.min.js" asp-append-version="true"></script>
+    </environment>
 
-        @RenderSection("Scripts", required: false)
+    @RenderSection("Scripts", required: false)
 
 
 </body>
